Add exceptions for NOT_FOUND and BAD_REQUEST HTTP responses + fox issue on product id auto incrementation in database