@@ -2,16 +2,18 @@ package alten.demo.shop.controller;
 
 import alten.demo.shop.dto.Product;
 import alten.demo.shop.entity.ProductEntity;
+import alten.demo.shop.exception.BadRequestException;
+import alten.demo.shop.exception.NotFoundException;
 import alten.demo.shop.repository.ProductRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class ProductControllerService {
 
+    public static final String NOT_FOUND_EXCEPTION_MESSAGE_FORMAT = "No product found with  id %d";
     private final ProductRepository repository;
 
     public ProductControllerService(ProductRepository repository) {
@@ -36,60 +38,35 @@ public class ProductControllerService {
     }
 
     public List<Product> getAllProducts() {
-        return this.repository.findAll().stream().map(this::toDto).collect(Collectors.toList());
+        return this.repository.findAll().stream().map(this::toDto).toList();
     }
 
-    public Product getProductById(long id){
+    public Product getProductById(long id) throws NotFoundException {
         Optional<ProductEntity> entity = this.repository.findById(id);
-        return entity.map(this::toDto).orElse(null);
+        if (entity.isEmpty()) {
+            throw new NotFoundException(String.format(NOT_FOUND_EXCEPTION_MESSAGE_FORMAT, id));
+        }
+        return this.toDto(entity.get());
     }
 
-    public Product updateProductById(long id, Product patch){
+    public Product updateProductById(long id, Product patch) throws BadRequestException, NotFoundException {
+        if (patch.getId() != id) {
+            throw new BadRequestException("Given path variable id and poriduct id are not equal");
+        }
         Optional<ProductEntity> entityOpt = this.repository.findById(id);
-        if(entityOpt.isEmpty()){
-            return null;
+        if (entityOpt.isEmpty()) {
+            throw new NotFoundException(String.format(NOT_FOUND_EXCEPTION_MESSAGE_FORMAT, id));
         }
-
-        ProductEntity entity = entityOpt.get();
-        if(patch.getCategory() != null){
-            entity.setCategory(patch.getCategory());
-        }
-        if(patch.getCode() != null){
-            entity.setCode(patch.getCode());
-        }
-        if(patch.getName() != null){
-            entity.setName(patch.getName());
-        }
-        if(patch.getImage() != null){
-            entity.setImage(patch.getImage());
-        }
-        if(patch.getDescription() != null){
-            entity.setDescription(patch.getDescription());
-        }
-        if(patch.getPrice() != null){
-            entity.setPrice(patch.getPrice());
-        }
-        if(patch.getRating() != null){
-            entity.setRating(patch.getRating());
-        }
-        if(patch.getQuantity() != null){
-            entity.setQuantity(patch.getQuantity());
-        }
-        if(patch.getInventoryStatus() != null){
-            entity.setInventoryStatus(patch.getInventoryStatus());
-        }
-
-        ProductEntity updatedEntity = this.repository.save(entity);
+        ProductEntity updatedEntity = this.repository.save(this.toEntity(patch));
         return toDto(updatedEntity);
     }
 
-    public boolean deleteProductById(long id){
+    public void deleteProductById(long id) throws NotFoundException {
         Optional<ProductEntity> entityOpt = this.repository.findById(id);
-        if(entityOpt.isEmpty()){
-            return false;
+        if (entityOpt.isEmpty()) {
+            throw new NotFoundException(String.format(NOT_FOUND_EXCEPTION_MESSAGE_FORMAT, id));
         }
         this.repository.deleteById(id);
-        return true;
     }
 
     private Product toDto(ProductEntity entity) {
@@ -104,6 +81,21 @@ public class ProductControllerService {
                 .inventoryStatus(entity.getInventoryStatus())
                 .rating(entity.getRating())
                 .quantity(entity.getQuantity())
+                .build();
+    }
+
+    private ProductEntity toEntity(Product product) {
+        return ProductEntity.builder()
+                .id(product.getId())
+                .image(product.getImage())
+                .name(product.getName())
+                .price(product.getPrice())
+                .code(product.getCode())
+                .category(product.getCategory())
+                .description(product.getDescription())
+                .inventoryStatus(product.getInventoryStatus())
+                .rating(product.getRating())
+                .quantity(product.getQuantity())
                 .build();
     }
 }
